--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -1,5 +1,23 @@
-/* body {
-  background: #17878f;
-  background-image: url("https://www.transparenttextures.com/patterns/soft-wallpaper.png");
-  font-family: "Acme", sans-serif;
-} */
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar:hover {
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #205a76;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #63a4c5;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: #111821;
+}
