--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,33 +1,13 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
 }
-
+/* 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-::-webkit-scrollbar {
-  width: 15px;
-}
-
-::-webkit-scrollbar:hover {
-  cursor: pointer;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #205a76;
-}
-
-::-webkit-scrollbar-track {
-  background-color: #63a4c5;
-}
-
-::-webkit-scrollbar-corner {
-  background-color: #111821;
-}
+} */
