--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,81 @@
-body {
+/* body {
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
-}
+  -moz-osx-font-smoothing: grayscale;
+} */
 /* 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 } */
+
+/* .MuiDataGrid-root .MuiDataGrid-columnHeader:focus,
+.MuiDataGrid-root .MuiDataGrid-cell:focus {
+  outline: none !important;
+} */
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar:hover {
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #63a4c5;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #205a76;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: #205a76;
+}
+
+.font__family {
+  font-family: "Acme", sans-serif !important;
+}
+
+/* .MuiDataGrid-root .MuiDataGrid-columnHeader:focus,
+.MuiDataGrid-root .MuiDataGrid-cell:focus {
+  outline: none !important;
+} */
+
+/* .MuiSvgIcon-root .MuiSvgIcon-root:focus {
+  outline: none !important;
+} */
+
+.MuiDataGrid-root .MuiDataGrid-cell:focus-within {
+  outline: none !important;
+}
+
+/* .css-tzssek-MuiSvgIcon-root:focus,
+.css-78trlr-MuiButtonBase-root-MuiIconButton-root:focus {
+  outline: none !important;
+} */
+/* 
+.css-bsqp9w-MuiSvgIcon-root {
+  font-size: 2rem !important;
+} */
+
+.css-78trlr-MuiButtonBase-root-MuiIconButton-root {
+  background-color: rgb(50 205 92 / 64%) !important;
+  color: #205a76 !important;
+  height: 45px;
+  width: 45px;
+  margin-left: 10px;
+  /* font-size: 50px !important; */
+}
