--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,7 +38,8 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #205a76;
+  /* background-color: #205a76; */
+  background-color: #39518d;
 }
 
 ::-webkit-scrollbar-corner {
@@ -72,7 +73,7 @@ body {
 } */
 
 .css-78trlr-MuiButtonBase-root-MuiIconButton-root {
-  background-color: rgb(225 218 17 / 72%) !important;
+  /* background-color: rgb(225 218 17 / 72%) !important; */
   color: #205a76 !important;
   height: 45px;
   width: 45px;
